# simple-messenger

./: .gitignore  pyproject.toml
client/: __main__.py  soc.py
migrations/: env.py
migrations/versions/: fdc90d860fd6_init_db.py
server/: __main__.py  create_app.py
server/api/: sockets.py
server/api/auth/: core.py  views.py
server/chat/: chat.py  connection_manager.py  models.py
server/db/: db_models.py  session.py
server/oauth2/: core.py
server/templates/: a.html  b.html  c.html  chat.html
static/: chat.css
templates/: chat.html
