[tool.poetry]
name = "simple-messenger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
websockets = "^11.0.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
